// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils arrowFunctionExpressionVisitor should not wrap arrow function with memo within ClassBody 1`] = `
"class fakeComponent extends Component {
  render() {
    const jsxreturn = () => {
      return <div>hello</div>;
    };
  }
}"
`;

exports[`utils arrowFunctionExpressionVisitor should not wrap arrow function with memo within ClassProperty 1`] = `
"class fakeComponent extends Component {
  jsxreturn() {
    return <div>hello</div>;
  }render() {
    return <div>hello</div>;
  }
}"
`;

exports[`utils arrowFunctionExpressionVisitor should wrap arrow function with memo 1`] = `
"const fakeComponent = memo(() => {
  return <div>hello</div>;
});"
`;

exports[`utils updateReactImportNode should add named export to react default export 1`] = `"import React, { memo } from 'react';"`;

exports[`utils updateReactImportNode should extend named exports 1`] = `"import React, { Component, Foo, memo } from 'react';"`;

exports[`utils updateReactImportNode should not extend named exports if not react 1`] = `"import { isEqual } from 'lodash';"`;
